--- a/rust/projects/project-1/Cargo.toml
+++ b/rust/projects/project-1/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kvs"
 version = "0.1.0"
-authors = ["Yilin Chen <sticnarf@gmail.com>"]
+authors = ["Yilin Chen <sticnarf@gmail.com>", "Lulu Wang <wllvcxz@gmail.com>"]
 description = "A key-value store"
 edition = "2018"
 
